--- a/styles.css
+++ b/styles.css
@@ -69,12 +69,16 @@ header .profile-image {
   margin-top: 50px;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  border: 3px solid white;
-  transition: all .5s;
+  border-radius: 40%;
+  border: 4px solid cornflowerblue;
+  transition: all .75s;
+  /* border-radius: 50%; */
+  /* border: 3px solid white; */
+  /* transition: all .5s; */
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  /* transform: scale(1.2) rotate(5deg); */
+  transform: scale(1.3) rotate(8deg);
 }
 .tag {
   background-color: #efefef;
@@ -201,6 +205,11 @@ a.social:hover {
     font-size: 1.3em;
     max-width: 1200px;
     margin: 40px auto;
+  }
+
+  .hobby {
+    border-radius: 10%;
+    width: 400px;
   }
 
 }
